encode the rootUri properly

in addition, use ::fromUtf8, that copies, the QLatin1String requires life time
of the array

it will work here, but I don't think it hurts to be safe

BUG: 510863